--- a/projectcss.css
+++ b/projectcss.css
@@ -1,6 +1,6 @@
 body{
 	background-image: url('http://www.dronacharyadce.ac.in/Slider/data1/images/new1.jpg');
 	width: 100%;
-	height: 2000px;
+	height: auto;
 	background-repeat: no-repeat;
 }
