--- a/projectcss.css
+++ b/projectcss.css
@@ -94,7 +94,7 @@ ul li{
 	background-image: url('http://www.dronacharyadce.ac.in/Slider/data1/images/new1.jpg');
 	width: 100%;
 	height: 780px;
-	background-repeat: no-repeat;
+	background-repeat:
 	background-size: cover;
 	margin: 0;
 	padding: 0;
