--- a/projectcss.css
+++ b/projectcss.css
@@ -93,8 +93,8 @@ ul li{
 .bgimg {
 	background-image: url('http://www.dronacharyadce.ac.in/Slider/data1/images/new1.jpg');
 	width: 100%;
-	height: 780px;
-	background-repeat:
+	height: 800px;
+	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0;
 	padding: 0;
