--- a/projectcss.css
+++ b/projectcss.css
@@ -44,7 +44,7 @@ p{
 ul li{
 			
 			background-color: rgba(240, 247, 252, 1);
-			width: 278px;
+			width: 247px;
 			float: left;
 			border: 1px solid white;
 			height: 50px;
@@ -78,7 +78,7 @@ ul li{
 			display: block;
 		}
 		ul ul ul{
-			margin-left: 278px;
+			margin-left: 247px;
 			position: absolute;
 			top: 0;
 		}
@@ -93,7 +93,7 @@ ul li{
 .bgimg {
 	background-image: url('http://www.dronacharyadce.ac.in/Slider/data1/images/new1.jpg');
 	width: 100%;
-	height: 800px;
+	height: -webkit-fill-available;
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0;
