--- a/facultycss.css
+++ b/facultycss.css
@@ -1,6 +1,9 @@
 body{
 	margin: 0;
 	background-color: bisque;
+	background-image: url("https://wallpaperscraft.com/image/lines_stripes_color_background_43493_3840x2400.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 
