--- a/apsrscss.css
+++ b/apsrscss.css
@@ -24,3 +24,51 @@ header{
     margin-top: -96px;
   
 }
+
+.divider{
+	background-color: white;
+	height: 2px;
+}
+
+ul li{
+			
+	background-color: brown;
+	width: 254px;
+	float: left;
+	border: 1px solid white;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	position: relative;
+}
+	ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+	ul li a{
+
+	text-decoration: none;
+	color: black;
+	display: block;
+}
+
+	ul li:hover{
+
+	background-color: white;
+}
+	ul ul{
+
+	display: none;
+}
+	ul li:hover >ul{
+
+	display: block;
+}
+	ul ul ul{
+
+	margin-left: 254px;
+	position: absolute;
+	top: 0;
+}
