--- a/apsrscss.css
+++ b/apsrscss.css
@@ -1,6 +1,6 @@
 body{
 	margin: 0;
-	background-color: bisque;
+	background-color: ;
 }
 
 header{
@@ -33,7 +33,7 @@ header{
 ul li{
 			
 	background-color:rgba(240, 247, 252, 1);
-	width: 254px;
+	width: 250px;
 	float: left;
 	border: 1px solid white;
 	height: 50px;
@@ -68,7 +68,7 @@ ul li{
 }
 	ul ul ul{
 
-	margin-left: 254px;
+	margin-left: 250px;
 	position: absolute;
 	top: 0;
 }
@@ -89,6 +89,7 @@ ul li{
 	float: left;
 	text-align: center;
 	border: double;
+	background-color: bisque;
 }
 
 .divider3{
@@ -98,5 +99,58 @@ ul li{
 }
 
 .img1:hover{
-	width: 51%
+	width: 51%;
 }
+	
+	
+
+   		 .newss{
+			width: 45%;
+			height: 400px;
+			border: outset;
+			overflow: hidden;
+			margin-left: 53%;
+			background-color:
+
+		}
+		.a{
+			text-decoration: none;
+			color: black;
+		}
+
+		.a:hover{
+			color: red;
+		}
+
+		.latest{
+			text-align: center;
+			font-size: 25px;
+			background-color: brown;
+			color: white;
+			height: 42px;
+    		padding-top: 10px;
+   			margin-top: 14px;
+		}
+
+		.ln{
+			padding-left: 15px;
+		}
+
+		.as{
+			float: left;
+			margin-top: -377px;
+			width: 45%;
+		}
+
+		.nacc{
+			float: left;
+			width: 20%;
+			margin: 0 20px 10px 0;
+		}
+
+		.aicte{
+			float: left;
+			width: 20%;
+			margin: 19px 20px 10px 0;
+		}
+
