--- a/contactuscss.css
+++ b/contactuscss.css
@@ -2,6 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	background-image: url("http://ggnindia.dronacharya.info/img/Building.jpg");
+	height: 667px;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
